# plotsim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE.md  SECURITY.md  index.html  mkdocs.yml  plotsim-schema.json  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
analysis/: builder-docs-template-gap-2026-05-02.md  fidelity-report.md  m127_post.md  m127_pre.md  m127_verification.ipynb
analysis/fidelity_sweeps/: correlation_matrix_results.csv  determinism_matrix_results.csv  lag_recovery_results.csv  sweep_analyzer.py  sweep_runner.py  trajectory_first_results.csv
analysis/perf/: m121_vectorized.py
api-reference/: index.html
assets/brand/: palette.css
binder/: requirements.txt
cli-reference/: index.html
column-types/: index.html
config-reference/: index.html
cookbook/data-engineering/: index.html
cookbook/data-science/: index.html
docs/: engine-internals.md  statistical-fidelity.md
docs/assets/: README.md
docs/internal/: builder-errors.md  builder-quickstart.md  builder-reference.md  config-guide.md  engine-internals.md  getting-started.md  reference.md  statistical-fidelity.md  templates.md
docs/site/: api-reference.md  cli-reference.md  column-types.md  config-reference.md  feature-reference.md  index.md  manifest-reference.md  tutorials.md
docs/site/cookbook/: data-engineering.md  data-engineers.md  data-science.md  data-scientists.md
docs/site/tutorial-notebooks/: bridges_and_advanced.ipynb  data_quality.ipynb  de_use_cases.ipynb  designing_archetypes.ipynb  ds_use_cases.ipynb  getting_started.ipynb  ml_readiness.ipynb  pipeline_testing.ipynb  schema_and_dimensions.ipynb  seasonality_and_correlations.ipynb
docs/site/user-guide/: archetypes.md  cdc-facts.md  (+12 more)
docs/tutorial-notebooks/: bridges_and_advanced.ipynb  data_quality.ipynb  de_use_cases.ipynb  designing_archetypes.ipynb  ds_use_cases.ipynb  getting_started.ipynb  ml_readiness.ipynb  pipeline_testing.ipynb  schema_and_dimensions.ipynb  seasonality_and_correlations.ipynb
examples/: quickstart.py  render_trajectory_plot.py
feature-reference/: index.html
manifest-reference/: index.html
notebooks/: README.md  _helpers.py  acceptance_test.ipynb  engine_test_.ipynb  template_qualifier.ipynb
overrides/: main.html
plotsim/: __init__.py  _column_dispatch.py  _distribution_registry.py  _faker.py  _types.py  cli.py  config.py  curves.py  denormalize.py  dimensions.py  entity_features.py  gp.py  holdout.py  inspect.py  log_writer.py  manifest.py  metrics.py  multi_source.py  outlier_injections.py  output.py  quality.py  scaffold.py  schema.py  tables.py  trajectory.py  validation.py
plotsim/builder/: __init__.py  input.py  interpreter.py  parser.py  recipes.py  schema.py
plotsim/configs/: de_recipes.yaml  ds_recipes.yaml  sample_ecommerce.yaml  sample_education.yaml  sample_healthcare.yaml  sample_hr.yaml  sample_marketing.yaml  sample_retail.yaml  sample_saas.yaml
plotsim/data/: __init__.py  geo_locations.py
search/: search_index.json
tests/: test_bridge_tables.py  test_bridge_validator.py  test_builder_dx.py  test_builder_input.py  test_builder_integration.py  test_builder_interpreter.py  test_builder_parser.py  test_builder_power_features.py  test_builder_recipes.py  test_builder_schema.py  test_bypass_observability.py  test_cdc_facts.py  test_cli.py  test_cli_validate.py  test_cold_start.py  test_config.py  test_correlation_bypass.py  test_correlation_compensation.py  test_correlation_ordering.py  test_correlation_projection.py  test_curves.py  test_dataframe_mutation.py  test_dead_schema.py  test_denormalize.py  test_dict_field_caps.py  test_dimensions.py  test_dtype_source_validation.py  test_duplicate_correlations.py  test_entity_expansion.py  test_entity_features.py  test_entity_overrides.py  test_event_timestamp.py  test_fidelity_smoke.py  test_fk_target_resolution.py  test_geo_provider.py  test_heavy_tailed_noise.py  test_heteroscedastic_noise.py  test_holdout.py  test_inspect.py  test_integration.py  (+49 more)
tests/configs/: __init__.py  ab_trial.py  ab_trial.yaml  bare_minimum.py  bare_minimum.yaml  cdc_demo.py  cdc_demo.yaml  crm_billing_overlap.py  crm_billing_overlap.yaml  geo_retail.py  lakehouse.yaml  latency_skew.py  latency_skew.yaml  narrative_reviews.yaml  orders_template.py  orders_template.yaml  retail_template.py  retail_template.yaml  saas_template.py  saas_template.yaml
tests/fidelity_sweeps/: __init__.py  claim1_correlation.py  claim2_lag.py  claim3_trajectory.py  claim4_determinism.py  sweep_analyzer.py  sweep_runner.py
tests/fixtures/: _generate_layer4_fixtures.py  source_type_coverage_config.yaml
tutorial-notebooks/bridges_and_advanced/: bridges_and_advanced.ipynb  index.html
tutorial-notebooks/data_quality/: data_quality.ipynb  index.html
tutorial-notebooks/de_use_cases/: de_use_cases.ipynb  index.html
tutorial-notebooks/designing_archetypes/: designing_archetypes.ipynb  index.html
tutorial-notebooks/ds_use_cases/: ds_use_cases.ipynb  index.html
tutorial-notebooks/getting_started/: getting_started.ipynb  index.html
tutorial-notebooks/ml_readiness/: index.html  ml_readiness.ipynb
tutorial-notebooks/pipeline_testing/: index.html
tutorial-notebooks/schema_and_dimensions/: index.html
tutorial-notebooks/seasonality_and_correlations/: index.html
user-guide/archetypes/: index.html
user-guide/cdc-facts/: index.html
user-guide/denormalization/: index.html
user-guide/experiments-and-cohorts/: index.html
user-guide/geo-hierarchy/: index.html
user-guide/how-it-works/: index.html
user-guide/log-writer/: index.html
user-guide/metrics-and-connections/: index.html
user-guide/multi-source/: index.html
user-guide/narrative-source/: index.html
user-guide/output-formats/: index.html
user-guide/parent-child-facts/: index.html
user-guide/schema-guide/: index.html
user-guide/seasonality/: index.html
(+101 files in other folders)
