[project]
name = "plotsim"
version = "0.4.0"
description = "Generate multi-table synthetic datasets with behavioral trajectories, correlations, and causal lags. Config-driven, deterministic, no real data required."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Mohamed Hossam" }
]
keywords = [
    "synthetic-data",
    "data-generator",
    "test-data",
    "fake-data",
    "multi-table",
    "relational-data",
    "star-schema",
    "dimensional-model",
    "data-engineering",
    "dbt",
    "analytics",
    "time-series",
    "behavioral-simulation",
    "dataset-generator",
    "tabular-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "faker>=18.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.36",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "build>=1.0",
    "twine>=4.0",
    "scikit-learn>=1.3",
    "hypothesis>=6.0",
]
test = [
    "pytest>=7.0",
    "scikit-learn>=1.3",
    "hypothesis>=6.0",
]

[project.scripts]
plotsim = "plotsim.cli:main"

[project.urls]
Homepage = "https://github.com/mohossam-ae/plotsim"
Documentation = "https://github.com/mohossam-ae/plotsim#readme"
Repository = "https://github.com/mohossam-ae/plotsim"
Issues = "https://github.com/mohossam-ae/plotsim/issues"
Changelog = "https://github.com/mohossam-ae/plotsim/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plotsim*"]

[tool.setuptools.package-data]
plotsim = ["configs/*.yaml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: end-to-end tests (slow)"]

