[project]
name = "plotsim"
version = "0.6.1"
description = "Generate multi-table relational datasets with behavioral trajectories, correlations, and causal lags. Config-driven, deterministic, no real data required"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Mohamed Hossam" }
]
keywords = [
    "synthetic-data",
    "simulation",
    "python",
    "pandas",
    "data-generation",
    "relational-data",
    "behavioral-data",
    "archetype",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "faker>=18.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.36",
]
parquet = [
    "pyarrow>=14.0",
]
docs = [
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "build>=1.0",
    "twine>=4.0",
    "scikit-learn>=1.3",
    "hypothesis>=6.0",
    "pyarrow>=14.0",
    "pre-commit>=3.7",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    # Pin faker for CI reproducibility — fixture row counts and string
    # outputs depend on faker's RNG, which can change across minor versions.
    # Runtime keeps faker>=18.0 so library users aren't constrained.
    "faker==37.1.0",
]
test = [
    "pytest>=7.0",
    "scikit-learn>=1.3",
    "hypothesis>=6.0",
    "pyarrow>=14.0",
]

[project.scripts]
plotsim = "plotsim.cli:main"

[project.urls]
Homepage = "https://mohossam01.github.io/plotsim/"
Documentation = "https://mohossam01.github.io/plotsim/"
Repository = "https://github.com/mohossam01/plotsim"
Issues = "https://github.com/mohossam01/plotsim/issues"
Changelog = "https://github.com/mohossam01/plotsim/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plotsim*"]

[tool.setuptools.package-data]
plotsim = ["py.typed"]
"plotsim.configs" = ["*.yaml"]
"plotsim.configs.templates" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests sometimes set up sys.path or imports in mid-file blocks; notebooks
# naturally interleave imports with prose cells. Both are intentional.
"tests/**/*.py" = ["E402"]
"docs/site/tutorial-notebooks/*.ipynb" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: end-to-end tests (slow)"]
